--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chisel-decoders"
-version = "0.1.15"
+version = "0.1.16"
 edition = "2021"
 authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
 rust-version = "1.56"
@@ -16,7 +16,7 @@ repository = "https://github.com/jonnycoombes/chisel-decoders"
 criterion = "0.4.0"
 
 [[bench]]
-name = "micro"
+name = "fuzz"
 harness = false
 
 [features]
