--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chisel-decoders"
-version = "0.1.16"
+version = "0.1.17"
 edition = "2021"
 authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
 rust-version = "1.56"
@@ -17,6 +17,10 @@ criterion = "0.4.0"
 
 [[bench]]
 name = "fuzz"
+harness = false
+
+[[bench]]
+name = "twitter"
 harness = false
 
 [features]
