--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chisel-decoders"
-version = "0.1.17"
+version = "0.1.18"
 edition = "2021"
 authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
 rust-version = "1.56"
@@ -16,11 +16,8 @@ repository = "https://github.com/jonnycoombes/chisel-decoders"
 criterion = "0.4.0"
 
 [[bench]]
-name = "fuzz"
+name = "decoding"
 harness = false
 
-[[bench]]
-name = "twitter"
-harness = false
 
 [features]
