--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ pprof = {version = "0.11.1", features = ["flamegraph", "criterion", "protobuf"]}
 name = "decoding"
 harness = false
 
-
 [features]
+
+[badges]
+github = { repository = "https://github.com/jonnycoombes/chisel-decoders" }
