--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,11 @@ criterion = {version ="0.4.0", features = ["html_reports"]}
 pprof = {version = "0.11.1", features = ["flamegraph", "criterion", "protobuf"]}
 
 [[bench]]
-name = "decoding"
+name = "native_decoding"
+harness = false
+
+[[bench]]
+name = "iter_decoding"
 harness = false
 
 [features]
